--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,9 @@
     "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
